--- a/package.yml
+++ b/package.yml
@@ -1,10 +1,10 @@
 name       : ant-gtk-theme
 version    : 1.3.0
-release    : 6
+release    : 7
 source     :
     - git|https://github.com/EliverLara/Ant.git : d79ceec15207b3d8020eabb8ab62fcbea206b609
 license    : GPL-3.0-or-later
-component  : desktop.themes
+component  : desktop.theme
 summary    : A flat and light theme with a modern look
 description: |
     A flat and light theme with a modern look
